# freddy_bot

./: .gitignore  README.md  ai_notes.MD  config.example.json  persona_freddy.md  pyproject.toml  run_freddy_bot.py
prompt_data/: Singles Chat-bad block.html  Singles Chat-bad block2.html  Singles Chat-bad block3.html
prompt_data/Singles Chat-bad block2_files/: css2(13)  css2(3)  css2(8)  css2(9)  function_avatar.js.stažený soubor  function_main.js.stažený soubor  function_temp.js.stažený soubor  keno.css  main.css
prompt_data/Singles Chat-bad block3_files/: DSG_Dice.css  colors.css  css2  css2(1)  css2(10)  css2(11)  css2(2)  function_handlers.js.stažený soubor  function_logged.js.stažený soubor  quizbot.css
prompt_data/Singles Chat-bad block_files/: aps_buy_wallet.css  coo-widget.js.stažený soubor  css2(12)  css2(14)  css2(15)  css2(5)  css2(6)  css2(7)  function_call.js.stažený soubor  function_menu.js.stažený soubor  function_split.js.stažený soubor  responsive.css  vip.css
scripts/: start_brave_debug.ps1
src/freddy_bot/: __init__.py  chat_watcher.py  cli.py  config.py  logging.py  utils.py
src/freddy_bot/ai/: codex_client.py  prompt_builder.py  reply_quality.py  reply_service.py
src/freddy_bot/app/: bot_prevention.py  commands.py  context_collection.py  records.py  state.py  watcher.py
src/freddy_bot/browser/: avatar_click.py  avatar_menu.py  brave.py  cdp.py  dom.py  glob_actions.py  inspector.py  page_finder.py  sender.py  user_actions.py
src/freddy_bot/chat/: models.py  parsing.py  prompt_detection.py  reply_formatting.py
(+3 files in other folders)
