[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freddy-bot"
version = "0.1.0"
description = "Read-only chat watcher for manually opened Brave sessions."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
